{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Movment",
            "id": "010ab74c-7a2d-429b-b274-cb820cf2c9eb",
            "actions": [
                {
                    "name": "MousePositionY",
                    "type": "Value",
                    "id": "a48b0f54-70ec-4e0b-a756-48a34c348a91",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePositionX",
                    "type": "Value",
                    "id": "58cbb608-9c87-490a-855c-34d8f6be196e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "590b269c-a929-4ed7-afb8-1c03d0ee3e75",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "e3e3fca2-8edf-4d06-b1a7-1e2565842378",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "198944bc-9691-482d-960f-7827069b6a96",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "606645b6-7f27-40c4-9a5e-e08a30b33a36",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MeleeAttack",
                    "type": "Button",
                    "id": "f77dcd8e-3cdc-4764-833e-81d88b162188",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RangedAttack",
                    "type": "Button",
                    "id": "e039c1c9-94ed-4000-94cb-2d18d3eb8ce9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "90e23f53-a774-41b8-adb8-3c3c51d94876",
                    "path": "<Mouse>/position/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePositionX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69a6d514-40d0-4711-ab19-72b040e9b8c7",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8fd017e6-e2f7-4314-89ff-0d726adcc370",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a5910c8-a4ec-4976-98c9-a467bba85a60",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b73babcc-535d-4822-aed7-202a1a98ecbc",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "58a32e8c-bf65-40d1-ad34-fe7669f3ccc7",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MeleeAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "369d0b8f-61b5-4821-af26-0e4d0e106924",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RangedAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e772d39-e9b1-46df-bccc-596aa806e73f",
                    "path": "<Mouse>/position/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePositionY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}